Correct MongoDB after Micronaut 4 annotation changes